syntax = "proto3";
option java_package = "com.syphan.grpc.protoFile";

service EmployeeService {
  rpc findById(Id) returns (Employee);
  rpc findByDepartment(Id) returns (EmployeeList);
  rpc findByOrganization(Id) returns (EmployeeList);
}

message Employee {
  int64 id = 1;
  int64 organizationId = 2;
  int64 departmentId = 3;
  string name = 4;
  int32 age = 5;
  string position = 6;
}

message Id {
  int64 id = 1;
}

message EmployeeList {
  repeated Employee employees = 1;
}
